# CondReg

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cran-comments.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test.yml
Original/demo/: 00Index
Original/man/: select_kmax.Rd
Original/src/: Makevars
R/: condreg.R
condreg-cpp/: CMakeLists.txt  README.md
condreg-cpp/include/condreg/: path_solvers.hpp
condreg-cpp/src/: condreg.cpp  path_solvers.cpp
condreg-cpp/test/: test_condreg.cpp  test_path_solvers.cpp  test_utils.cpp
condreg-py/: README.md  requirements.txt  setup.py
condreg-py-interface/: .gitignore  MANIFEST.in  README.md  build_cpp.py  condreg_loader.py  init_condreg.py  init_path.py  pyproject.toml  setup.cfg  setup.py  test_condreg.py
condreg-py-interface/.github/workflows/: build-test.yml
condreg-py-interface/condreg/: __init__.py  condreg_loader.py  init_condreg.py
condreg-py-interface/condreg.egg-info/: PKG-INFO  SOURCES.txt
condreg-py-interface/condreg_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
condreg-py-interface/test_env/: pyvenv.cfg
condreg-py-interface/tests/: test_condreg.py
condreg-py/condreg/: __init__.py  core.py  cv.py  path_solvers.py  utils.py
condreg-py/condreg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
condreg-py/examples/: advanced_visualization.py  eigenvalue_shrinkage.py  portfolio_optimization.py
condreg-py/tests/: test1.py
condregR/: .Rbuildignore  DESCRIPTION  README.md
condregR/R/: data.R
condregR/condregR.Rcheck/: condregR-Ex.R  condregR-Ex.Rout  condregR-Ex.timings
condregR/condregR.Rcheck/00_pkg_src/condregR/: DESCRIPTION  NAMESPACE
condregR/condregR.Rcheck/00_pkg_src/condregR/R/: RcppExports.R  condreg.R  zzz.R
condregR/condregR.Rcheck/00_pkg_src/condregR/man/: condreg.Rd  select_kmax.Rd
condregR/condregR.Rcheck/00_pkg_src/condregR/src/: Makevars.win  RcppExports.cpp  path_solvers.cpp  symbols.rds  utils.cpp
condregR/condregR.Rcheck/00_pkg_src/condregR/tests/testthat/: test-condreg.R
condregR/condregR.Rcheck/condregR/: DESCRIPTION  INDEX  LICENSE
condregR/condregR.Rcheck/condregR/Meta/: Rd.rds  data.rds  demo.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
condregR/condregR.Rcheck/condregR/R/: condregR.rdb  condregR.rdx
condregR/condregR.Rcheck/condregR/data/: Rdata.rdb  Rdata.rds  Rdata.rdx
condregR/condregR.Rcheck/condregR/demo/: portfolio_optimization.R
condregR/condregR.Rcheck/condregR/help/: AnIndex  aliases.rds  condregR.rdb  condregR.rdx  paths.rds
condregR/condregR.Rcheck/condregR/html/: 00Index.html
condregR/condregR.Rcheck/condregR/include/condreg/: condreg.hpp  utils.hpp
condregR/condregR.Rcheck/tests/: testthat.R  testthat.Rout
condregR/demo/: 00Index
condregR/src/: Makevars  rcpp_bindings.cpp
demo/: compare_wealth.R
man/: R.Rd  condreg.Rd  crbulk.Rd  datasnp.Rd  kgrid.Rd  ml_solver.Rd  path_backward.Rd  path_forward.Rd  pfweights.Rd  select_condreg.Rd  select_kmax.Rd  transcost.Rd
